<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Panzehir</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Login">Giriş Yap</string>
    <string name="emailOrNickname">Kullanıcı Adı veya E-posta</string>
    <string name="password">Şifre</string>
    <string name="forgotPassword">Şifremi Unuttum</string>
    <string name="SignUp">Hemen Üye Ol</string>
    <string name="email">E-mail</string>
    <string name="resetPassword">Şifreyi Sıfırla</string>
    <string name="signupPage">Kayıt Ol</string>
    <string name="patient">
        <u>Hasta Profili</u>
    </string>
    <string name="relativesofpatient">
        <u>Hasta Yakını Profili</u>
    </string>
    <string name="patientLogin">Hasta Girişi</string>
    <string name="relativesofthepatinetLogin">Hasta Yakını Girişi</string>
    <string name="name">Ad</string>
    <string name="surname">Soyad</string>
    <string name="phoneNumber">Cep Telefonu</string>
    <string name="memories">Anı Köşesi</string>
    <string name="howToPlay">
        <u>
            <i>Oyun Nasıl Oynanır?</i>
        </u>
    </string>
    <string name="startGame">
        <u>
            <i>Oyun\'a Başla!</i>
        </u>
    </string>
    <string name="games">Oyunlar</string>
    <string name="cardMatching">Kart Eşleştirme Oyunu</string>
    <string name="mazeGame">Labirent</string>
    <string name="sudoku">Sudoku</string>
    <string name="anagram">Anagram</string>
    <string name="profile">Profil</string>
    <string name="p2_0">P2: 0</string>
    <string name="p1_0">P1: 0</string>
    <string name="todo" tools:ignore="DuplicateDefinition">TODO</string>

    <string name="password_hint">• • • • • •</string>
    <string name="id_hint">• • • • • • • • • • •</string>
    <string name="you_example_com">you@example.com</string>
    <string name="phoneNumberHint">(5xx) xxx xx xx</string>
    <string name="sign_out">Sign Out</string>
    <string name="k_yap">Çıkış Yap</string>
    <string name="incoming_meeting_invitation">Incoming Meeting Invitation</string>
    <string name="sending_meeting_invitation">Sending Meeting Invitation</string>

    <string-array name="blood">
        <item>None</item>
        <item>0 Rh (+)</item>
        <item>0 Rh (-)</item>
        <item>AB Rh (+)</item>
        <item>AB Rh (-)</item>
        <item>A Rh (+)</item>
        <item>A Rh (-)</item>
        <item>B Rh (+)</item>
        <item>B Rh (-)</item>
    </string-array>

    <string-array name="gender">
        <item>None</item>
        <item>Kadın</item>
        <item>Erkek</item>
    </string-array>

    <string-array name="degree">
        <item>None</item>
        <item>Eş</item>
        <item>Kız</item>
        <item>Oğul</item>
        <item>Torun</item>
    </string-array>
    <string name="quizTitle">Kısa Sınav</string>
    <string name="proverb_quiz">Atasözleri</string>
    <string name="expression_quiz">Deyimler</string>
    <string name="vegetable">Sebzeler</string>
    <string name="fruit">Meyveler</string>

</resources>