<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/xmlBackground"
        android:orientation="vertical"
        tools:context=".view.games.Games">

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/games"
            android:textSize="35sp"
            android:id="@+id/gamesPageTitle"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginTop="50dp"

    />
    <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shaperectangle"
            android:padding="40dp"
            android:id="@+id/cardMachingGame"
            android:text="@string/cardMatching"
            android:textColor="@color/black"
            android:layout_marginBottom="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:backgroundTint="#545454" app:backgroundTint="#E59A97"/>
    <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shaperectangle"
            android:padding="40dp"
            android:id="@+id/MazeGame"
            android:text="@string/mazeGame"
            android:textColor="@color/black"
            android:layout_marginBottom="45dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:backgroundTint="#E59A97"/>
    <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shaperectangle"
            android:padding="40dp"
            android:id="@+id/sudoku"
            android:text="@string/sudoku"
            android:textColor="@color/black"
            android:layout_marginBottom="85dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            app:backgroundTint="#E59A97"/>

</LinearLayout>