<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".loginsignup.Login"
        android:background="@drawable/arkaplan"
>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/titleOfLogin"
            android:text="@string/Login"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="30sp"
            android:layout_margin="20dp"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputEmail"
            android:hint="@string/emailOrNickname"
            android:textStyle="italic"

            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"

    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputPassword"
            android:hint="@string/password"
            android:textStyle="italic"
            android:inputType="numberPassword"
            android:ems="10"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"

    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ForgotPasswordInLogin"
            android:text="@string/forgotPassword"
            android:textColor="@color/black"
            android:drawablePadding="6dp"
            android:padding="4dp"
            android:layout_marginStart="250dp"

    />
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <com.google.android.material.button.MaterialButton
                android:layout_width="@dimen/_230sdp"
                android:layout_height="wrap_content"
                android:id="@+id/loginButton"
                android:text="@string/Login"
                android:textColor="@color/black"
                app:cornerRadius="15dp"
                android:backgroundTint="#443468"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <ProgressBar
                android:id="@+id/signInProgressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/loginButton"
                app:layout_constraintEnd_toEndOf="@id/loginButton"
                app:layout_constraintStart_toStartOf="@id/loginButton"
                app:layout_constraintTop_toTopOf="@id/loginButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>


    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/Or"
            android:layout_marginTop="@dimen/_50sdp"
            android:text="veya"
            android:gravity="center"
            android:textColor="@color/black"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"

    />
    <Button
            android:layout_width="206dp"
            android:layout_height="wrap_content"
            android:id="@+id/SignUp"
            android:text="@string/SignUp"
            android:textColor="@color/black"
            app:cornerRadius="15dp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
            android:backgroundTint="@color/teal_700"

    />


</LinearLayout>