<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context=".loginsignup.ForgotPassword"
              android:orientation="vertical"
              android:background="@drawable/arkaplan"
>


    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ForgotPasswordpageTitle"
            android:text="@string/forgotPassword"
            android:layout_gravity="center"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_marginTop="120dp"

    />
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/inputEmailForget"
            android:hint="@string/email"
            android:textStyle="italic"
            android:layout_marginTop="70dp"
            android:layout_marginStart="@dimen/_20sdp"
            android:layout_marginEnd="@dimen/_20sdp"
    />
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
        <Button
                android:layout_width="@dimen/_250sdp"
                android:layout_height="wrap_content"
                android:id="@+id/forgetButton"
                android:text="@string/resetPassword"
                android:textColor="@color/black"
                app:cornerRadius="15dp"
                android:backgroundTint="#443468"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
        <ProgressBar
                android:id="@+id/forgetProgressBar"
                android:layout_width="@dimen/_25sdp"
                android:layout_height="@dimen/_25sdp"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@id/forgetButton"
                app:layout_constraintEnd_toEndOf="@id/forgetButton"
                app:layout_constraintStart_toStartOf="@id/forgetButton"
                app:layout_constraintTop_toTopOf="@id/forgetButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>



</LinearLayout>