<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <include
                android:layout_width="wrap_content"
                android:layout_height="300dp"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:id="@+id/includeImages"
                layout="@layout/images"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true"
                android:text="@string/p1_0"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:id="@+id/tv_p1"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:text="@string/p2_0"
                android:textSize="32sp"
                android:textColor="@color/black"
                android:id="@+id/tv_p2"
                tools:ignore="RelativeOverlap"/>
    </RelativeLayout>
    <androidx.coordinatorlayout.widget.CoordinatorLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/xmlBackground"
            tools:context=".view_Patient.games.CardMachingGame">





        <com.google.android.material.bottomappbar.BottomAppBar
                android:id="@+id/bottomAppBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:fabCradleMargin="20dp"
                app:fabCradleVerticalOffset="10dp"
                app:fabCradleRoundedCornerRadius="20dp"
                android:layout_gravity="bottom">

            <com.google.android.material.bottomnavigation.BottomNavigationView
                    android:id="@+id/bottomNavigationView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/background_transparent"
                    app:menu="@menu/bottom_nav_menu_patient"/>

        </com.google.android.material.bottomappbar.BottomAppBar>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_home"
                android:contentDescription="@string/app_name"
                app:layout_anchor="@id/bottomAppBar"/>


    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
